[gd_scene load_steps=13 format=3 uid="uid://dvwfwwc61wbve"]

[ext_resource type="Texture2D" uid="uid://er2featxinhy" path="res://Image/UI/Inventory/InventorySheet.png" id="1"]
[ext_resource type="Texture2D" uid="uid://ch4ll306uen27" path="res://Image/UI/Inventory/SliderGrabber.png" id="4_2pfiy"]
[ext_resource type="FontFile" uid="uid://dqc0qlcs7io7u" path="res://Font/8PX Font Regular.ttf" id="4_siufk"]
[ext_resource type="Script" uid="uid://b0jxlkwsoau5c" path="res://Scene/UI/Inventory/SplitStackPopUp.gd" id="5"]
[ext_resource type="Texture2D" uid="uid://c10j0rx4nnf2w" path="res://Image/UI/Inventory/SliderGrabberDisabled.png" id="5_3ishs"]
[ext_resource type="FontFile" uid="uid://wlylu51glfig" path="res://Font/6px Numbers.ttf" id="5_i1sci"]
[ext_resource type="Texture2D" uid="uid://20chs7uwj6k2" path="res://Image/UI/Inventory/Slider.png" id="6_bnh5x"]
[ext_resource type="Texture2D" uid="uid://bhxoivxryay4e" path="res://Image/UI/Inventory/InventoryBG.png" id="12"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sgi8g"]

[sub_resource type="Theme" id="4"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_62dl1"]
texture = ExtResource("6_bnh5x")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 3.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ppvgd"]

[node name="SplitStackPopUp" type="Popup"]
disable_3d = true
size = Vector2i(150, 70)
visible = true
min_size = Vector2i(150, 70)
content_scale_stretch = 1
script = ExtResource("5")

[node name="BG" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12")
expand_mode = 1
stretch_mode = 1

[node name="Frame" type="NinePatchRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("1")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Margin" type="MarginContainer" parent="Frame"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 3.0
offset_right = -6.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBox" type="VBoxContainer" parent="Frame/Margin"]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2

[node name="Name" type="Label" parent="Frame/Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_siufk")
theme_override_font_sizes/font_size = 8
text = "<ItemName>"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SliderBox" type="HBoxContainer" parent="Frame/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="LabelL" type="LineEdit" parent="Frame/Margin/VBox/SliderBox"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("5_i1sci")
theme_override_styles/focus = SubResource("StyleBoxEmpty_sgi8g")
text = "99999"
alignment = 2
max_length = 5
context_menu_enabled = false
flat = true

[node name="HSlider" type="HSlider" parent="Frame/Margin/VBox/SliderBox"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 20.0
theme = SubResource("4")
theme_override_icons/grabber = ExtResource("4_2pfiy")
theme_override_icons/grabber_highlight = ExtResource("4_2pfiy")
theme_override_icons/grabber_disabled = ExtResource("5_3ishs")
theme_override_styles/slider = SubResource("StyleBoxTexture_62dl1")

[node name="LabelR" type="LineEdit" parent="Frame/Margin/VBox/SliderBox"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("5_i1sci")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ppvgd")
text = "99999"
max_length = 5
context_menu_enabled = false
flat = true

[node name="ButtonBox" type="HBoxContainer" parent="Frame/Margin/VBox"]
layout_mode = 2
alignment = 1

[node name="Ok" type="Button" parent="Frame/Margin/VBox/ButtonBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_siufk")
theme_override_font_sizes/font_size = 8
text = "OK"

[node name="Cancel" type="Button" parent="Frame/Margin/VBox/ButtonBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_siufk")
theme_override_font_sizes/font_size = 8
text = "CANCEL"

[connection signal="focus_exited" from="Frame/Margin/VBox/SliderBox/LabelL" to="." method="_on_label_l_focus_exited"]
[connection signal="text_changed" from="Frame/Margin/VBox/SliderBox/LabelL" to="." method="_on_label_l_text_changed"]
[connection signal="text_submitted" from="Frame/Margin/VBox/SliderBox/LabelL" to="." method="_on_label_l_text_submitted"]
[connection signal="value_changed" from="Frame/Margin/VBox/SliderBox/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="focus_exited" from="Frame/Margin/VBox/SliderBox/LabelR" to="." method="_on_label_l_focus_exited"]
[connection signal="text_changed" from="Frame/Margin/VBox/SliderBox/LabelR" to="." method="_on_label_l_text_changed"]
[connection signal="text_submitted" from="Frame/Margin/VBox/SliderBox/LabelR" to="." method="_on_label_l_text_submitted"]
[connection signal="pressed" from="Frame/Margin/VBox/ButtonBox/Ok" to="." method="_on_ok_pressed"]
[connection signal="pressed" from="Frame/Margin/VBox/ButtonBox/Cancel" to="." method="_on_cancel_pressed"]
